# Qv2rayBase-PythonBinding

./: .gitignore  .gitmodules  CMakeLists.txt  test.py
.github/workflows/: build-and-generate-stubs.yml
src/: QContainerCaster.hpp  QJsonCaster.hpp  main.cpp
