cmake_minimum_required(VERSION 3.4...3.18)
project(cmake_example)
set(PYBIND11_FINDPYTHON ON)
add_subdirectory(pybind11)
add_subdirectory(interface)
#find_package(pybind11 CONFIG REQUIRED)

option(QV2RAY_PYBIND_STUBGEN "Generate stubs" OFF)
if(QV2RAY_PYBIND_STUBGEN)
    add_compile_definitions(QV2RAY_PYBIND_STUBGEN=1)
    add_executable(embedded_python src/main.cpp src/QJsonCaster.hpp src/QContainerCaster.hpp)
else()
    add_library(Qv2ray)
endif()

target_link_libraries(embedded_python PUBLIC Qv2ray::QvPluginInterface pybind11::embed)
target_compile_definitions(embedded_python PRIVATE QT_NO_SIGNALS_SLOTS_KEYWORDS)
